# Smart-bird-project

./: .gitignore  TECHNICAL_DOCUMENTATION.md  setup_project.ps1  smart-bird.code-workspace  use_project_deps.ps1
smart-bird-EPS32/: .gitignore  BATTERY_WIRING.md  BUTTON_RGB_WIRING.md  CLOUD_AI_SETUP.md  CMakeLists.txt  README.md  SOIL_PROBE_WIRING.md  check_esp32_env.ps1  run_monitor.ps1
smart-bird-EPS32/build_battery_check/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flasher_args.json  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
smart-bird-EPS32/build_collect_check/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_project_args  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
smart-bird-EPS32/build_probe_check/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
smart-bird-EPS32/components/AI/: AI.c  (+1 more)
smart-bird-EPS32/components/Config/: CMakeLists.txt
smart-bird-EPS32/components/Config/include/: bird_test_config.h
smart-bird-EPS32/main/: BSP.h  CMakeLists.txt  main.c
smart-bird-server/: check_server_env.ps1  run_server.ps1
smart-bird-server/App/: .npmrc  BUILD_APK.md  README.md  app.js  capacitor.config.json  index.html  package-lock.json  package.json  service-worker.js
smart-bird-server/server/: .env  .env.example  app.py  requirements.txt
(+834 files in other folders)
